# xch-MIND

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docs/: ONTOLOGY_EVOLUTION.md  OPTION_C_FULL_LEARNING.md
entities/: Accettula.xml  Aeddo.xml  Albarosa.xml  Argentina.xml  Arzoledda.xml  Bilella.xml  Bisceglie.xml  Canali.xml  Caroppo 1.xml  Caroppo 2.xml  Casiglio.xml  Chiancuse.xml  Ciuledda.xml  Corato.xml  Corrizzola.xml  Cosi.xml  Cupeia.xml  Elcomis.xml  Gesturi.xml  Grassi.xml  Grotta.xml  Gurgulante.xml  I Massi della Vecchia.xml  I di Arbu.xml  Is Cadonis.xml  La Chianca.xml  Ladas.xml  Li Scusi.xml  Madonna di Cristo.xml  Matta Larentu_1.xml  Matta Larentu_2.xml  Matta Larentu_6.xml  Montalbano.xml  Monte Longu.xml  Montiju Coronas.xml  Motorra.xml  Muttianu.xml  Nela.xml  Noazza.xml  Oronita.xml  (+14 more)
ontology/xch/: xch-core.ttl  xch-shapes.ttl
output/xch_run_20260220_163743/: metadata.json  xch_output_20260220_163743.ttl
output/xch_run_20260220_164604/: metadata.json  xch_output_20260220_164604.ttl
output/xch_run_20260220_165243/: metadata.json  xch_output_20260220_165243.ttl
output/xch_run_20260220_165746/: metadata.json  xch_output_20260220_165746.ttl
output/xch_run_20260223_120007/: metadata.json  xch_output_20260223_120007.ttl
output/xch_run_20260223_120729/: metadata.json  review_queue.json  (+1 more)
output_baseline/: baseline_results.json
scripts/: SCRIPTS.md  ablation_comparison.py  analyze_cache.py  baseline_single_prompt.py  check_models.py  compute_metrics.py  test_logging.py
src/: __init__.py  main.py  pipeline.py
(+38 files in other folders)
